services/ui: make autorepeat work with accelerator.

BUG=706571

Review-Url: https://codereview.chromium.org/2788753002
Cr-Commit-Position: refs/heads/master@{#461122}

Former-commit-id: 16dd65423c4063f423238456001c672464474a99